--- a/confetti-sample/src/main/res/layout/activity_main.xml
+++ b/confetti-sample/src/main/res/layout/activity_main.xml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/generate_confetti_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:padding="16dp"
-        android:text="Generate confetti!" />
-
-</FrameLayout>
+    android:layout_height="match_parent" />
