[sample] Added once, stream, and infinite to each of the sample screens

--- a/confetti-sample/src/main/res/layout/activity_confetti.xml
+++ b/confetti-sample/src/main/res/layout/activity_confetti.xml
@@ -4,12 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/generate_confetti_btn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:padding="16dp"
-        android:text="@string/generate_confetti_action" />
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/generate_confetti_once_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="16dp"
+            android:text="@string/generate_confetti_once" />
+
+        <Button
+            android:id="@+id/generate_confetti_stream_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="16dp"
+            android:text="@string/generate_confetti_stream" />
+
+        <Button
+            android:id="@+id/generate_confetti_infinite_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="16dp"
+            android:text="@string/generate_confetti_infinite" />
+
+    </LinearLayout>
 
 </FrameLayout>
