--- a/confetti/src/main/res/values/dimens.xml
+++ b/confetti/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Default elevation for the confetti -->
+    <dimen name="confetti_default_elevation">9999dp</dimen>
     <!-- Default accelerationX, num dp per second-->
     <dimen name="default_acceleration_x_dp_per_second">0dp</dimen>
     <!-- Default accelerationY, num dp per second -->
