[confetti-sample] Update sample project to include a terminate button

--- a/confetti-sample/src/main/res/layout/activity_confetti.xml
+++ b/confetti-sample/src/main/res/layout/activity_confetti.xml
@@ -34,6 +34,14 @@
             android:padding="16dp"
             android:text="@string/generate_confetti_infinite" />
 
+        <Button
+            android:id="@+id/generate_confetti_stop_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="16dp"
+            android:text="@string/stop_confetti" />
+
     </LinearLayout>
 
 </FrameLayout>
